--- a/.travis.yml
+++ b/.travis.yml
@@ -109,7 +109,7 @@ matrix:
         
         # Using the ninja build command. Is much faster then make build command.
         - mkdir cmake-build && cd cmake-build && \
-        /usr/local/android-sdk/cmake/3.6.4111459/bin/cmake -G'Android Gradle - Ninja' -DANDROID_ABI=armeabi-v7a -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=/usr/local/android-sdk/ndk-bundle/build/cmake/android.toolchain.cmake -DANDROID_PLATFORM=android-19 -DCMAKE_MAKE_PROGRAM=/usr/local/android-sdk/cmake/3.6.4111459/bin/ninja -DENABLE_TESTS=ON .. && \
+        /usr/local/android-sdk/cmake/3.6.4111459/bin/cmake -G'Android Gradle - Ninja' -DANDROID_ABI=armeabi-v7a -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=/usr/local/android-sdk/ndk-bundle/build/cmake/android.toolchain.cmake -DANDROID_PLATFORM=android-19 -DANDROID_DEPRECATED_HEADERS=ON -DCMAKE_MAKE_PROGRAM=/usr/local/android-sdk/cmake/3.6.4111459/bin/ninja -DENABLE_TESTS=ON .. && \
         /usr/local/android-sdk/cmake/3.6.4111459/bin/cmake --build . --target all -- -v && \
         /usr/local/android-sdk/cmake/3.6.4111459/bin/cmake --build . --target test
 
