--- a/Crypto/testsuite/CMakeLists.txt
+++ b/Crypto/testsuite/CMakeLists.txt
@@ -19,6 +19,6 @@ POCO_SOURCES_AUTO_PLAT( TEST_SRCS WINCE
 add_executable( ${TESTUNIT} ${TEST_SRCS} )
 add_test(NAME ${LIBNAME} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} COMMAND ${TESTUNIT} -all)
 target_link_libraries( ${TESTUNIT} PocoCrypto PocoNetSSL PocoXML PocoUtil PocoFoundation CppUnit )
-if(UNIX)
+if(UNIX AND NOT ANDROID)
     target_link_libraries( ${TESTUNIT} pthread)
-endif(UNIX)
+endif(UNIX AND NOT ANDROID)
