--- a/.travis.yml
+++ b/.travis.yml
@@ -96,15 +96,15 @@ matrix:
         # takes a while. Looks like the "echo y" solution is not working. Needs improvement !
         - export TERM=dumb
         - echo "yes" | /usr/local/android-sdk/tools/bin/sdkmanager "ndk-bundle" "cmake;3.6.4111459"      
-      #before_script:
-        #- export TERM=dumb
-        #- export _NO_CHECK_SIGNATURE=true
-        #- echo no | /usr/local/android-sdk/tools/bin/avdmanager create avd -n test -k "system-images;android-23;google_apis;armeabi-v7a"
-        #- emulator -avd test -no-audio -no-window &
-        #- android-wait-for-emulator
+      before_script:
+        - export TERM=dumb
+        - export _NO_CHECK_SIGNATURE=true
+        - echo no | /usr/local/android-sdk/tools/bin/avdmanager create avd -n test -k "system-images;android-19;google_apis;armeabi-v7a"
+        - emulator -avd test -no-audio -no-window &
+        - android-wait-for-emulator
       script:
-        # Mandatory cmake parameter for the android toolchain:
-        # /usr/local/android-sdk/cmake/3.6.4111459/bin/cmake -DANDROID_ABI=armeabi-v7a -DCMAKE_TOOLCHAIN_FILE=/usr/local/android-sdk/ndk-bundle/build/cmake/android.toolchain.cmake -DANDROID_PLATFORM=android-22
+        # Mandatory cmake parameter to set API level and platform for the android toolchain:
+        # /usr/local/android-sdk/cmake/3.6.4111459/bin/cmake -DCMAKE_TOOLCHAIN_FILE=/usr/local/android-sdk/ndk-bundle/build/cmake/android.toolchain.cmake -DANDROID_ABI=armeabi-v7a -DANDROID_PLATFORM=android-22
         # See also in /usr/local/android-sdk/ndk-bundle/build/cmake/android.toolchain.cmake
         
         # Using the ninja build command. Is much faster then make build command.
