--- a/.travis.yml
+++ b/.travis.yml
@@ -104,7 +104,7 @@ matrix:
       before_script:
         - export TERM=dumb
         - export _NO_CHECK_SIGNATURE=true
-        - echo no | /usr/local/android-sdk/tools/bin/avdmanager create avd -n test -k "system-images;android-19;google_apis;armeabi-v7a"
+        - echo no | /usr/local/android-sdk/tools/bin/avdmanager create avd -n test -k "system-images;android-19;default;armeabi-v7a"
         - emulator -avd test -no-audio -no-window &
         - android-wait-for-emulator
       script:
