--- a/.travis.yml
+++ b/.travis.yml
@@ -92,9 +92,11 @@ matrix:
         licenses:
           - '.+'
       before_install:
+        - export TERM=dumb
+        - sudo apt-get update -qq
+        - sudo apt-get install -qq -y qemu-system-arm
         # install NDK and cmake via android sdkmanager. Unfortunaly to acknowledge the licenses 
         # takes a while. Looks like the "echo y" solution is not working. Needs improvement !
-        - export TERM=dumb
         - touch ~/.android/repositories.cfg
         - mkdir -p /usr/local/android-sdk/licenses
         - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > /usr/local/android-sdk/licenses/android-sdk-license
