Cleanup find openssl in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,28 +97,24 @@ if(MSVC)
     ## windows xcopy does not tolerate forward-slash, must change this
     STRING(REGEX REPLACE "/" "\\\\" PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR})
     set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}\\openssl\\VS_120\\")
+  else()
+    add_definitions( -DPOCO_EXTERNAL_OPENSSL)
   endif()
 endif(MSVC)
 
 set(OPENSSL_FOUND false)
-if(USING_INTERNAL_OPENSSL)
-  message(STATUS "Using OpenSSL from ${OPENSSL_ROOT_DIR}")
-  set(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}include\\")
-  set(OPENSSL_FOUND true)
-else()
-  find_package(OpenSSL QUIET)
-  if(OPENSSL_FOUND)
-    add_definitions( -DPOCO_EXTERNAL_OPENSSL)
-    message(STATUS "Using OpenSSL from ${OPENSSL_ROOT_DIR}")
-  endif()
-endif()
+find_package(OpenSSL QUIET)
 if(OPENSSL_FOUND)
-    option(ENABLE_NETSSL "Enable NetSSL" ON)
-    option(ENABLE_CRYPTO "Enable Crypto" ON)
+  message(STATUS "Using OpenSSL from ${OPENSSL_ROOT_DIR}")
+  option(ENABLE_NETSSL "Enable NetSSL" ON)
+  option(ENABLE_CRYPTO "Enable Crypto" ON)
 else()
-    option(ENABLE_NETSSL "Enable NetSSL" OFF)
-    option(ENABLE_CRYPTO "Enable Crypto" OFF)
+  message(STATUS "OpenSSL not found")
+  message(STATUS "Disable NetSSL and Crypto support")
+  option(ENABLE_NETSSL "Enable NetSSL" OFF)
+  option(ENABLE_CRYPTO "Enable Crypto" OFF)
 endif()
+
 if(WIN32)
     option(ENABLE_NETSSL_WIN "Enable NetSSL Windows" ON)
 else()
