--- a/Crypto/CMakeLists.txt
+++ b/Crypto/CMakeLists.txt
@@ -9,10 +9,6 @@ POCO_SOURCES_AUTO( SRCS ${SRCS_G})
 file(GLOB_RECURSE HDRS_G "include/*.h" )
 POCO_HEADERS_AUTO( SRCS ${HDRS_G})
 
-# warning: this must be defined before target, otherwise
-# the link_directories() directive is ignored
-include(OpenSSLInternalLib)
-
 add_library( "${LIBNAME}" ${LIB_MODE} ${SRCS} )
 add_library( "${POCO_LIBNAME}" ALIAS "${LIBNAME}")
 set_target_properties( "${LIBNAME}"
@@ -22,14 +18,11 @@ set_target_properties( "${LIBNAME}"
     DEFINE_SYMBOL Crypto_EXPORTS
     )
 
-include(OpenSSLInternalLibCopy)
-
-target_link_libraries( "${LIBNAME}" Foundation ${OPENSSL_LIBRARIES} )
+target_link_libraries( "${LIBNAME}" Foundation OpenSSL::Crypto )
 target_include_directories( "${LIBNAME}"
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
-        ${OPENSSL_INCLUDE_DIR}
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/src
     )
