Comment out msbuilds to get quicker results

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,13 +68,13 @@ environment:
   OPENSSL64:    C:\OpenSSL-Win64
 
   matrix:
-    - builder: msbuild
-      vsver: 140
-      linkmode: shared
+    #- builder: msbuild
+      #vsver: 140
+      #linkmode: shared
 
-    - builder: msbuild
-      vsver: 150
-      linkmode: shared
+    #- builder: msbuild
+      #vsver: 150
+      #linkmode: shared
 
 #    - builder: msbuild
 #      vsver: 140
