--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,8 +102,12 @@ if(MSVC)
   endif()
 endif(MSVC)
 
-set(OPENSSL_FOUND false)
-find_package(OpenSSL QUIET)
+if(ENABLE_NETSSL OR ENABLE_CRYPTO)
+    find_package(OpenSSL REQUIRED)
+else()
+    find_package(OpenSSL QUIET)
+endif(ENABLE_NETSSL OR ENABLE_CRYPTO)
+
 if(OPENSSL_FOUND)
   message(STATUS "Using OpenSSL from ${OPENSSL_ROOT_DIR}")
   option(ENABLE_NETSSL "Enable NetSSL" ON)
@@ -242,11 +246,7 @@ if(WIN32 AND ENABLE_NETSSL_WIN)
     list(APPEND Poco_COMPONENTS "NetSSL_Win")
 endif(WIN32 AND ENABLE_NETSSL_WIN)
 
-if(ENABLE_NETSSL OR ENABLE_CRYPTO)
-  if(NOT OPENSSL_FOUND)
-    find_package(OpenSSL REQUIRED)
-  endif()
-  if(OPENSSL_FOUND)
+if(OPENSSL_FOUND)
     if(MSVC)
         list(APPEND OPENSSL_LIBRARIES ws2_32 Crypt32)
     endif()
@@ -259,8 +259,7 @@ if(ENABLE_NETSSL OR ENABLE_CRYPTO)
       add_subdirectory(Crypto)
       list(APPEND Poco_COMPONENTS "Crypto")
     endif()
-  endif(OPENSSL_FOUND)
-endif(ENABLE_NETSSL OR ENABLE_CRYPTO)
+endif(OPENSSL_FOUND)
 
 if(ENABLE_SQL)
     add_subdirectory(SQL)
