--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,28 +97,28 @@ if(MSVC)
     ## windows xcopy does not tolerate forward-slash, must change this
     STRING(REGEX REPLACE "/" "\\\\" PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR})
     set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}\\openssl\\VS_120\\")
+  else()
+    add_definitions( -DPOCO_EXTERNAL_OPENSSL)
   endif()
 endif(MSVC)
 
-set(OPENSSL_FOUND false)
-if(USING_INTERNAL_OPENSSL)
-  message(STATUS "Using OpenSSL from ${OPENSSL_ROOT_DIR}")
-  set(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}include\\")
-  set(OPENSSL_FOUND true)
+if(ENABLE_NETSSL OR ENABLE_CRYPTO)
+    find_package(OpenSSL REQUIRED)
 else()
-  find_package(OpenSSL QUIET)
-  if(OPENSSL_FOUND)
-    add_definitions( -DPOCO_EXTERNAL_OPENSSL)
-    message(STATUS "Using OpenSSL from ${OPENSSL_ROOT_DIR}")
-  endif()
-endif()
+    find_package(OpenSSL QUIET)
+endif(ENABLE_NETSSL OR ENABLE_CRYPTO)
+
 if(OPENSSL_FOUND)
-    option(ENABLE_NETSSL "Enable NetSSL" ON)
-    option(ENABLE_CRYPTO "Enable Crypto" ON)
+  message(STATUS "Using OpenSSL from ${OPENSSL_ROOT_DIR}")
+  option(ENABLE_NETSSL "Enable NetSSL" ON)
+  option(ENABLE_CRYPTO "Enable Crypto" ON)
 else()
-    option(ENABLE_NETSSL "Enable NetSSL" OFF)
-    option(ENABLE_CRYPTO "Enable Crypto" OFF)
+  message(STATUS "OpenSSL not found")
+  message(STATUS "Disable NetSSL and Crypto support")
+  option(ENABLE_NETSSL "Enable NetSSL" OFF)
+  option(ENABLE_CRYPTO "Enable Crypto" OFF)
 endif()
+
 if(WIN32)
     option(ENABLE_NETSSL_WIN "Enable NetSSL Windows" ON)
 else()
@@ -246,11 +246,7 @@ if(WIN32 AND ENABLE_NETSSL_WIN)
     list(APPEND Poco_COMPONENTS "NetSSL_Win")
 endif(WIN32 AND ENABLE_NETSSL_WIN)
 
-if(ENABLE_NETSSL OR ENABLE_CRYPTO)
-  if(NOT OPENSSL_FOUND)
-    find_package(OpenSSL REQUIRED)
-  endif()
-  if(OPENSSL_FOUND)
+if(OPENSSL_FOUND)
     if(MSVC)
         list(APPEND OPENSSL_LIBRARIES ws2_32 Crypt32)
     endif()
@@ -263,8 +259,7 @@ if(ENABLE_NETSSL OR ENABLE_CRYPTO)
       add_subdirectory(Crypto)
       list(APPEND Poco_COMPONENTS "Crypto")
     endif()
-  endif(OPENSSL_FOUND)
-endif(ENABLE_NETSSL OR ENABLE_CRYPTO)
+endif(OPENSSL_FOUND)
 
 if(ENABLE_SQL)
     add_subdirectory(SQL)
