--- a/NetSSL_OpenSSL/CMakeLists.txt
+++ b/NetSSL_OpenSSL/CMakeLists.txt
@@ -22,9 +22,7 @@ set_target_properties( "${LIBNAME}"
     DEFINE_SYMBOL NetSSL_EXPORTS
     )
 
-include(OpenSSLInternalLibCopy)
-
-target_link_libraries( "${LIBNAME}" Crypto Net Util Foundation ${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY} )
+target_link_libraries( "${LIBNAME}" Crypto Net Util Foundation)
 target_include_directories( "${LIBNAME}"
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
