--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,11 +92,10 @@ option(DISABLE_INTERNAL_OPENSSL "Disable internal OpensSSL binaries use" OFF)
 set(USING_INTERNAL_OPENSSL false)
 
 if(MSVC)
-  if((EXISTS "${PROJECT_SOURCE_DIR}\\openssl\\VS_120\\") AND NOT DISABLE_INTERNAL_OPENSSL)
+  if((EXISTS "${PROJECT_SOURCE_DIR}/openssl/VS_120/") AND NOT DISABLE_INTERNAL_OPENSSL)
     set(USING_INTERNAL_OPENSSL true)
-    ## windows xcopy does not tolerate forward-slash, must change this
-    STRING(REGEX REPLACE "/" "\\\\" PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR})
-    set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}\\openssl\\VS_120\\")
+    set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/openssl/VS_120/")
+    set(OPENSSL_MSVC_STATIC_RT TRUE)
   else()
     add_definitions( -DPOCO_EXTERNAL_OPENSSL)
   endif()
