--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,9 +92,9 @@ option(DISABLE_INTERNAL_OPENSSL "Disable internal OpensSSL binaries use" OFF)
 set(USING_INTERNAL_OPENSSL false)
 
 if(MSVC)
-  if((EXISTS "${PROJECT_SOURCE_DIR}/openssl/VS_120/") AND NOT DISABLE_INTERNAL_OPENSSL)
+  if((EXISTS "${PROJECT_SOURCE_DIR}/openssl/build/") AND NOT DISABLE_INTERNAL_OPENSSL)
     set(USING_INTERNAL_OPENSSL true)
-    set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/openssl/VS_120/")
+    set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/openssl/build/")
     set(OPENSSL_MSVC_STATIC_RT TRUE)
   else()
     add_definitions( -DPOCO_EXTERNAL_OPENSSL)
