Export external openssl definition when is needed in windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,14 +91,10 @@ option(ENABLE_NET "Enable Net" ON)
 option(DISABLE_INTERNAL_OPENSSL "Disable internal OpensSSL binaries use" OFF)
 set(USING_INTERNAL_OPENSSL false)
 
-if(MSVC)
-  if((EXISTS "${PROJECT_SOURCE_DIR}/openssl/build/") AND NOT DISABLE_INTERNAL_OPENSSL)
+if(MSVC AND (EXISTS "${PROJECT_SOURCE_DIR}/openssl/build/") AND NOT DISABLE_INTERNAL_OPENSSL)
     set(USING_INTERNAL_OPENSSL true)
     set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/openssl/build/")
     set(OPENSSL_MSVC_STATIC_RT TRUE)
-  else()
-    add_definitions( -DPOCO_EXTERNAL_OPENSSL)
-  endif()
 endif(MSVC)
 
 if(ENABLE_NETSSL OR ENABLE_CRYPTO)
