Add additional openssl root path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,13 @@ set(USING_INTERNAL_OPENSSL false)
 if(MSVC AND (EXISTS "${PROJECT_SOURCE_DIR}/openssl/build/") AND NOT DISABLE_INTERNAL_OPENSSL)
     set(USING_INTERNAL_OPENSSL true)
     set(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/openssl/build/")
+    if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
+        set(_MSVC_ARCH "64")
+    else()
+        set(_MSVC_ARCH "32")
+    endif()
+    list(APPEND OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/openssl/build/win${_MSVC_ARCH}/lib/debug/")
+    list(APPEND OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/openssl/build/win${_MSVC_ARCH}/lib/release/")
     set(OPENSSL_MSVC_STATIC_RT TRUE)
 endif(MSVC)
 
