--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,39 +68,40 @@ environment:
   OPENSSL64:    C:\OpenSSL-Win64
 
   matrix:
+    #- builder: msbuild
+      #vsver: 140
+      #linkmode: shared
+
+    #- builder: msbuild
+      #vsver: 150
+      #linkmode: shared
+
+#    - builder: msbuild
+#      vsver: 140
+#      linkmode: static_md
+
+#    - builder: msbuild
+#      vsver: 140
+#      linkmode: static_mt
+
+#    - builder: msbuild
+#      vsver: 150
+#      linkmode: shared
+
+#    - builder: msbuild
+#      vsver: 150
+#      linkmode: static_md
+
+#    - builder: msbuild
+#      vsver: 150
+#      linkmode: static_mt
+
     - builder: cmake
       vsver: 140
 
-#    - builder: cmake
-#      vsver: 150
-
-#    - builder: msbuild
-#      vsver: 140
-#      linkmode: shared
-
-    - builder: msbuild
+    - builder: cmake
       vsver: 150
-      linkmode: shared
 
-#    - builder: msbuild
-#      vsver: 140
-#      linkmode: static_md
-
-#    - builder: msbuild
-#      vsver: 140
-#      linkmode: static_mt
-
-#    - builder: msbuild
-#      vsver: 150
-#      linkmode: shared
-
-#    - builder: msbuild
-#      vsver: 150
-#      linkmode: static_md
-
-#    - builder: msbuild
-#      vsver: 150
-#      linkmode: static_mt
 
 matrix:
   fast_finish: true
@@ -398,8 +399,16 @@ build_script:
   - ps: |
       if ($env:builder -eq "cygwin")
       {
+          $LastExitCode=0;
           $cmd='bash.exe configure --everything --omit=PDF';iex "& $cmd"
+          if ($LastExitCode -ne 0) {
+            throw "$cmd failed with exit code $LastExitCode."
+          }
+          $LastExitCode=0;
           $cmd='make.exe -s';iex "& $cmd"
+          if ($LastExitCode -ne 0) {
+            throw "$cmd failed with exit code $LastExitCode."
+          }
       }
       if ($env:builder -eq "msbuild")
       {
@@ -434,6 +443,10 @@ build_script:
         $defs = "--config RelWithDebInfo"
         $defs+=" -G" + $generator;
         $defs+=" -DCMAKE_BUILD_TYPE=RelWithDebInfo";
+        if ($env:vsver -eq "150")
+        {
+            $defs+=" -DDISABLE_INTERNAL_OPENSSL=ON";
+        }
         $defs+=" -DENABLE_PDF=OFF";
         $defs+=" -DENABLE_NETSSL=ON";
         $defs+=" -DENABLE_NETSSL_WIN=ON";
@@ -488,7 +501,7 @@ test_script:
       {
         if ($env:builder -eq "cygwin")
         {
-          $global:LastExitCode=0;
+          $LastExitCode=0;
           if ($env:platform -eq "Win32")
           {
             $cmd = 'C:\cygwin\usr\sbin\cygserver.exe "&"';iex "& $cmd"
@@ -569,7 +582,7 @@ test_script:
           Write-Host -ForegroundColor Yellow $line;
 
           Write-Host -ForegroundColor Yellow 'ctest -C Debug -VV -E SQL*'
-          ctest -C Debug -VV -E SQL*
+          ctest -C Debug -VV -E SQL* -I 8,9
           popd
         }
         Write-Host $runs' runs, ' $fails' fails'
