--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,9 +68,9 @@ environment:
   OPENSSL64:    C:\OpenSSL-Win64
 
   matrix:
-    - builder: msbuild
-      vsver: 150
-      linkmode: shared
+#    - builder: msbuild
+#      vsver: 150
+#      linkmode: shared
 
     - builder: cmake
       vsver: 140
@@ -425,6 +425,7 @@ build_script:
             $generator = '"Visual Studio 15 2017"'
         }
         $defs = "--config RelWithDebInfo"
+        $defs+=" --trace-expand"
         $defs+=" -G" + $generator;
         $defs+=" -DCMAKE_BUILD_TYPE=RelWithDebInfo";
         $defs+=" -DENABLE_PDF=OFF";
@@ -586,19 +587,19 @@ on_failure:
 on_finish:
   - echo finish
 
-notifications:
-  - provider: Email
-    on_build_success: false
-    on_build_failure: false
-    on_build_status_changed: false
-
-  - provider: Slack
-    incoming_webhook: https://hooks.slack.com/services/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
-    auth_token:
-      secure: Xsss/K3VV9wZI9Ffwvafa67kyohNA437xJ3WA9fVI4w=
-    channel: appveyor
-    on_build_success: false
-    on_build_failure: true
-    on_build_status_changed: true
-
+#notifications:
+#  - provider: Email
+#    on_build_success: false
+#    on_build_failure: false
+#    on_build_status_changed: false
+#
+#  - provider: Slack
+#    incoming_webhook: https://hooks.slack.com/services/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
+#    auth_token:
+#      secure: Xsss/K3VV9wZI9Ffwvafa67kyohNA437xJ3WA9fVI4w=
+#    channel: appveyor
+#    on_build_success: false
+#    on_build_failure: true
+#    on_build_status_changed: true
+#
 
